# streaming-percentiles

./: .bazelignore  .bazelrc  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  WORKSPACE  build.bat  build.cmd  build.sh  build2.bat  package.json  publish.sh
.github/: github.bazelrc
.github/workflows/: bazel.yml  benchmark.yml  ci.yml  cmake.yml  main.yml  nightly.yml
CMake/: FindEmscripten.cmake
cpp/: BUILD  CMakeLists.txt  test_pkg.py  test_pkg.sh
cpp/bmark/: main.cpp
cpp/src/: CMakeLists.txt  binary_tree.hpp  ckms.cpp  ckms_hbq.cpp  ckms_hbq.hpp  ckms_impl.cpp  ckms_impl.hpp  ckms_lbq.cpp  ckms_lbq.hpp  ckms_tq.cpp  ckms_tq.hpp  ckms_uq.cpp  ckms_uq.hpp  gk.cpp  gk.hpp  qdigest.hpp  string_utils.hpp  targeted_quantile.hpp
cpp/src/include/stmpct/: binary_tree.hpp  ckms.hpp  ckms_hbq.hpp  ckms_impl.hpp  ckms_lbq.hpp  ckms_tq.hpp  ckms_uq.hpp  gk.hpp  stmpct.hpp  stmpct_alg.hpp  stmpctalg.hpp  string_utils.hpp
cpp/test/: CMakeLists.txt  test_pkg.py  test_pkg.sh
cpp/test/libstmpcttest/: CMakeLists.txt  abs.hpp  ckms_hbq_tests.cpp  ckms_lbq_tests.cpp  ckms_tq_tests.cpp  ckms_uq_tests.cpp  custom_number_type.hpp  gk_tests.cpp  minimal_number_type.hpp  qdigest_tests.cpp  stmpct_tests.cpp
cpp/test/testconsole/: CMakeLists.txt  main.cpp
cpp/test/testconsole/compat/: gettimeofday.cpp
dev/bench/: data.js
doc/api_reference/: index.md
doc/api_reference/cpp/: ckms_hbq.md  ckms_lbq.md  ckms_tq.md  ckms_uq.md  gk.md  qdigest.md  targeted_quantile.md
doc/api_reference/js/: ckms_hbq.md  ckms_lbq.md  ckms_tq.md  ckms_uq.md  gk.md  qdigest.md
js/: BUILD  CMakeLists.txt
js/src/: CMakeLists.txt  package.json  stmpct.cpp  umdprefix.js  umdsuffix.js
js/test/: CMakeLists.txt  ckms_hbq_tests.js  ckms_lbq_tests.js  ckms_tq_tests.js  ckms_uq_tests.js  gk_tests.js  test_pkg.py  test_tar_pkg.sh
js/test/browser/: BUILD  CMakeLists.txt  all_tests.js  all_tests.spec.js  ckms_hbq_sanity.html  gk_sanity.html  nightwatch-globals.js  nightwatch.json  plugin.js  plugin.ts  requirejs_test.html  tsconfig.json
js/test/browser/old/: all_tests.js  ckms_hbq_sanity.html  nightwatch-globals.js
js/test/browser/static/: ckms_hbq.html  gk.html  requirejs.html
js/test/node/: BUILD  CMakeLists.txt  ckms_hbq_tests.js  ckms_lbq_tests.js  ckms_tq_tests.js  ckms_uq_tests.js  expand_template.bzl  gk_tests.js  qdigest_tests.js  sp_node_tests.bzl
src/: CMakeLists.txt  gk.cpp  gk.hpp  main.cpp
src/include/stmpct/: gk.hpp
src/libstmpct/: CMakeLists.txt  gk.cpp
src/libstmpct/include/stmpct/: gk.hpp  stmpct.hpp
test/: CMakeLists.txt
test/libstmpcttest/: CMakeLists.txt  libstmpcttest.cpp  stmpct_tests.cpp
test/testconsole/: CMakeLists.txt  gettimeofday.h  main.cpp
test/testconsole/compat/: gettimeofday.h
test/testconsole/win32/: gettimeofday.cpp
